# pyter

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  dependabot.yml  mkdocs.yml  pyproject.toml  zensical.toml
.github/workflows/: pre-commit.yaml  test.yaml  website.yaml
docs/: api.md  index.md  installation.md
docs/api/: constraints.md  data.md  distributions.md  infer.md  models.md
docs/source/: conf.py  contents.md  index.rst  installation.rst  modules.md  modules.rst
pyter/: constraints.py  data.py  distributions.py  infer.py  models.py  pytermath.py
src/: setup.py
src/pyter/: constraints.py  data.py  distributions.py  infer.py  models.py  pytermath.py
src/test/: test_data_validation.py  test_models.py  test_poisson_single_hit.py  test_prior.py  test_pytermath.py
test/: test_data_validation.py  test_models.py  test_poisson_single_hit.py  test_pytermath.py
