[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "PyTer"
version = "0.3"
description = "PyTer: a package for Bayesian inference from virological data"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["Bayesian", "Bayes", "Numpyro", "Titration", "Plaque", "Virus"]
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
"numpy",
"jax",
"numpyro",
"attrs"
]

[tool.setuptools.packages.find]
where = ["src"]  # ["."] by default
