[project]
name = "Pyter"
version = "0.3"
description = "Pyter: a package for Bayesian inference from virological data"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["Bayesian", "Bayes", "Numpyro", "Titration", "Plaque", "Virus"]
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
"numpy",
"jax",
"numpyro",
"attrs"
]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
test = [
    "pytest>=8.4.1",
]
